fixed viewport sizes and alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
-.container {
-  margin: 0 auto;
-  max-height: 100vh;
+/* REMOVES DEFAULT MARGIN */
+* { 
+  margin: 0;
+  padding: 0;
 }
 
 .navbar {
@@ -8,13 +9,14 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 5vh;
+  height: 5dvh;
   background-color: rgb(224, 224, 224);
 }
 
 .row-items {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 .column-items {
@@ -22,23 +24,9 @@
   flex-direction: column;
 }
 
-/* .row1 {
-  height: 45vh;
-}
-
-.row2 {
-  height: 50vh;
-} */
-
 .graph-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   border: 1px solid rgb(230, 230, 230);
-  flex-grow: 1;
-  margin: 10px;
-}
-
-.bar, .scatter, .corr {
-  padding: 100px;
 }
